<resources>
    <string name="app_name">GWP App</string>
    <string name="welcome_string">Welcome,</string>
    <string name="signin_string">Sign in to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="email_validation">The email format is invalid, try again!</string>
    <string name="password_validation">The password size must be at least 8 characters</string>
    <string name="forgot_password_message">You must contact the superuser to update your password</string>

    <string name="conditions_login_text">By proceeding you also agree to the terms of Service and Privacy Policy</string>

    <string name="title_assessments">Assessments</string>
    <string name="title_resources">Resources</string>
    <string name="title_contacts">Contacts</string>

    <string name="volley_auth_failure_error">The user or password is incorrect.</string>
    <string name="volley_no_connection_error">The server is temporarily down for maintenance. \n\nTry again later.</string>
    <string name="volley_timeout_error">The server is temporarily down for maintenance. \n\nTry again later.</string>
    <string name="volley_server_error">The request could not be processed on the server. \n\nTry again later.</string>
    <string name="volley_parse_error">The server response could not be interpreted. \n\nTry again later.</string>
    <string name="volley_network_error">The network connection has some faults. \n\nTry connecting to another network.</string>
    <string name="volley_unknown_error">The request could not be sent to the server to be processed.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes_option">Yes</string>
    <string name="no_option">No</string>

    <string name="patient_id">Patient ID</string>
    <string name="paramedics">Paramedics</string>
    <string name="date">Date</string>
    <string name="ups">Ups!</string>
    <string name="no_internet_connection">There is no Internet connection. \nPlease check your connection</string>
    <string name="common_retry">Retry</string>
    <string name="example_email_text">example@email.com</string>
    <string name="example_password_text">******</string>
    <string name="login_email_error">Check the information entered!</string>
    <string name="back">Back</string>
    <string name="name">Name:</string>
    <string name="position">Position:</string>
    <string name="email_second_option">Email:</string>
    <string name="phone">Phone:</string>
    <string name="extension">Extension:</string>
    <string name="fax">Fax:</string>
    <string name="website">Website:</string>
    <string name="work_phone">Work Phone:</string>

    <string name="title_logout">Logout</string>
    <string name="title_protection">Information Protection Act</string>
</resources>