<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_assessments">

    <fragment
        android:id="@+id/navigation_assessments"
        android:name="com.guelphwellingtonparamedicsapp.fragments.AssessmentsFragment"
        android:label="@string/title_assessments"
        tools:layout="@layout/fragment_resources" />

    <fragment
        android:id="@+id/navigation_resources"
        android:name="com.guelphwellingtonparamedicsapp.fragments.ResourcesFragment"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_assessments" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.guelphwellingtonparamedicsapp.fragments.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />
</navigation>