<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.LoginActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/logo_splash_screen"
                android:layout_marginTop="@dimen/margin_100"
                android:layout_marginRight="@dimen/logo_splash_screen"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_string"
                    android:textColor="@color/blue_link"
                    android:textSize="@dimen/text_size_28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin_string"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/logo_splash_screen"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginRight="@dimen/logo_splash_screen"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edittext_48dp"
                        android:layout_marginTop="@dimen/margin_5"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/box_border_gray"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:padding="@dimen/margin_10"
                        android:textColor="@color/title_options_login" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edittext_48dp"
                        android:layout_marginTop="@dimen/margin_5"
                        android:autofillHints="password"
                        android:background="@drawable/box_border_gray"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:padding="@dimen/margin_10"
                        android:textColor="@color/title_options_login" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPasswordTv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/logo_splash_screen" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_50"
                android:gravity="bottom|center">

                <Button
                    android:id="@+id/signin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/logo_splash_screen"
                    android:layout_marginTop="@dimen/logo_splash_screen"
                    android:layout_marginEnd="@dimen/logo_splash_screen"
                    android:layout_marginBottom="@dimen/logo_splash_screen"
                    android:background="@color/blue_link"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signin_button"
                    android:layout_margin="@dimen/logo_splash_screen"
                    android:text="@string/conditions_login_text" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</layout>