<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OfflineActivity">

    <RelativeLayout
        android:id="@+id/noFoundRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/noFound"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_above="@+id/noFoundTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_no_internet" />

        <TextView
            android:id="@+id/noFoundTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/ups"
            android:textColor="@color/title_options_login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noFoundSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noFoundTitle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/no_internet_connection"
            android:textColor="@color/button_gray"
            android:textSize="18sp" />

        <Button
            android:id="@+id/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noFoundSubTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/common_retry" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>