<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".fragments.IndividualFormFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:layout_marginBottom="@dimen/margin_navigation_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/logo_splash_screen"
                app:cardCornerRadius="@dimen/margin_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/patientIdTi"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/margin_5"
                        android:labelFor="@+id/patientIdEt">

                        <EditText
                            android:id="@+id/patientIdEt"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_40dp"
                            android:background="@drawable/box_border_gray"
                            android:hint="@string/patient_id"
                            android:inputType="text"
                            android:maxLength="16"
                            android:nextFocusDown="@id/paramedicsEt"
                            android:padding="@dimen/margin_5" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/paramedicsTi"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/margin_5"
                        android:labelFor="@+id/patientIdEt">

                        <EditText
                            android:id="@+id/paramedicsEt"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_40dp"
                            android:background="@drawable/box_border_gray"
                            android:hint="@string/paramedics"
                            android:inputType="text"
                            android:maxLength="16"
                            android:nextFocusUp="@id/patientIdEt"
                            android:nextFocusDown="@id/dateEt"
                            android:padding="@dimen/margin_5" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/dateTi"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/margin_5"
                        android:labelFor="@+id/dateEt">

                        <EditText
                            android:id="@+id/dateEt"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_40dp"
                            android:background="@drawable/box_border_gray"
                            android:hint="@string/date"
                            android:inputType="date"
                            android:maxLength="10"
                            android:nextFocusUp="@id/paramedicsEt"
                            android:padding="@dimen/margin_5" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/formQuestionsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never" />

            <Button
                android:id="@+id/calculateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Calculate and save"
                android:layout_margin="@dimen/logo_splash_screen"
                android:textAllCaps="false"
                android:background="@color/teal_700"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>